# BasicOgre

./: CMakeLists.txt  main.cpp  yEngine.cpp  yEngine.h
CMake/Utils/: FindPkgMacros.cmake  PreprocessorUtils.cmake
